--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <script src="scripts/countdown.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script">
     <link rel="stylesheet" href="styles/countdown.css">
+    <meta name="description" content="Huize Hop, thuis voor de hopjes" />
+    <meta name="keywords" content="corne,elline,hop,van der vlies,huizehop,hopjes" />
 </head>
 
 <body>
-    <div>
-        <img src="images/Mokka.jpg" class="flowerimg topleft" />
-    </div>
     <div id="page-container">
         <h1 id="counter" onClick="playAudio()"></h1>
-    </div>
-    <div>
-        <img src="images/opel-logo.svg" class="flowerimg bottomright" />
     </div>
     <audio id="myAudio">
         <source src="sources/countdown.mp3" type="audio/mpeg">
